--- a/src/com/jshooting/forms/MainFrame.form
+++ b/src/com/jshooting/forms/MainFrame.form
@@ -93,11 +93,12 @@
         <Component class="javax.swing.JTextField" name="jTextFieldDatabaseFileName">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
+            <Property name="toolTipText" type="java.lang.String" value="&#x41f;&#x443;&#x441;&#x442;&#x44c; &#x43a; &#x43e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x43e;&#x439; &#x431;&#x430;&#x437;&#x435; &#x434;&#x430;&#x43d;&#x43d;&#x44b;&#x445;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonOpenDatabase">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x44c; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x44c;"/>
             <Property name="toolTipText" type="java.lang.String" value="&#x41e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x44c; &#x441;&#x443;&#x449;&#x435;&#x441;&#x442;&#x432;&#x443;&#x44e;&#x449;&#x443;&#x44e; &#x431;&#x430;&#x437;&#x443; &#x434;&#x430;&#x43d;&#x43d;&#x44b;&#x445;"/>
           </Properties>
           <Events>
@@ -106,7 +107,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonCreateDatabase">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x421;&#x43e;&#x437;&#x434;&#x430;&#x442;&#x44c; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x421;&#x43e;&#x437;&#x434;&#x430;&#x442;&#x44c;"/>
             <Property name="toolTipText" type="java.lang.String" value="&#x421;&#x43e;&#x437;&#x434;&#x430;&#x442;&#x44c; &#x43d;&#x43e;&#x432;&#x443;&#x44e; &#x431;&#x430;&#x437;&#x443; &#x434;&#x430;&#x43d;&#x43d;&#x44b;&#x445;"/>
           </Properties>
           <Events>
@@ -141,7 +142,7 @@
                           <Component id="jButtonTrainingMethods" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="10" max="32767" attributes="0"/>
+                  <EmptySpace pref="38" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -172,7 +173,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="jButtonSportsmans">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x421;&#x43f;&#x43e;&#x440;&#x442;&#x441;&#x43c;&#x435;&#x43d;&#x44b; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x421;&#x43f;&#x43e;&#x440;&#x442;&#x441;&#x43c;&#x435;&#x43d;&#x44b;"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x421;&#x43f;&#x43e;&#x440;&#x442;&#x441;&#x43c;&#x435;&#x43d;&#x44b;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSportsmansActionPerformed"/>
@@ -180,7 +183,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonPlaces">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x423;&#x422;&#x421; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x423;&#x422;&#x421;"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x423;&#x422;&#x421;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPlacesActionPerformed"/>
@@ -188,7 +193,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonAddTrainings">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x414;&#x43e;&#x431;&#x430;&#x432;&#x438;&#x442;&#x44c; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43a;&#x438; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x414;&#x43e;&#x431;&#x430;&#x432;&#x438;&#x442;&#x44c; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43a;&#x438;"/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x414;&#x43e;&#x431;&#x430;&#x432;&#x438;&#x442;&#x44c; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43a;&#x438;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAddTrainingsActionPerformed"/>
@@ -196,7 +202,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonCombined">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x413;&#x440;&#x443;&#x43f;&#x43f;&#x43e;&#x432;&#x43e;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x413;&#x440;&#x443;&#x43f;&#x43f;&#x43e;&#x432;&#x43e;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442;"/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x413;&#x440;&#x443;&#x43f;&#x43f;&#x43e;&#x432;&#x43e;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCombinedActionPerformed"/>
@@ -204,7 +211,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonTrainingMethods">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x421;&#x440;&#x435;&#x434;&#x441;&#x442;&#x432;&#x430; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x421;&#x440;&#x435;&#x434;&#x441;&#x442;&#x432;&#x430;"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x421;&#x440;&#x435;&#x434;&#x441;&#x442;&#x432;&#x430;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonTrainingMethodsActionPerformed"/>
@@ -212,7 +221,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonEditTrainings">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x41f;&#x440;&#x43e;&#x441;&#x43c;&#x43e;&#x442;&#x440; &#x438; &#x440;&#x435;&#x434;&#x430;&#x43a;&#x442;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x435; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43e;&#x43a; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x41f;&#x440;&#x43e;&#x441;&#x43c;&#x43e;&#x442;&#x440; &#x438; &#x440;&#x435;&#x434;&#x430;&#x43a;&#x442;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x435; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43e;&#x43a;"/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x41f;&#x440;&#x43e;&#x441;&#x43c;&#x43e;&#x442;&#x440; &#x438; &#x440;&#x435;&#x434;&#x430;&#x43a;&#x442;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x435; &#x442;&#x440;&#x435;&#x43d;&#x438;&#x440;&#x43e;&#x432;&#x43e;&#x43a;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEditTrainingsActionPerformed"/>
@@ -220,7 +230,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonIndividualReport">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x418;&#x43d;&#x434;&#x438;&#x432;&#x438;&#x434;&#x443;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442; ..."/>
+            <Property name="text" type="java.lang.String" value="&#x418;&#x43d;&#x434;&#x438;&#x432;&#x438;&#x434;&#x443;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442;"/>
+            <Property name="actionCommand" type="java.lang.String" value="&#x418;&#x43d;&#x434;&#x438;&#x432;&#x438;&#x434;&#x443;&#x430;&#x43b;&#x44c;&#x43d;&#x44b;&#x439; &#x43e;&#x442;&#x447;&#x435;&#x442;"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonIndividualReportActionPerformed"/>
